[package]
name = "concrete_stv_to_raire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.3", features = ["derive"]}
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
typed-arena = "2.0"
# Note that this requires raire-rs to be cloned
raire = { path = "../raire-rs/raire" }
# Note that this requires ConcreteSTV to be cloned
stv = { path="../ConcreteSTV/stv" }